<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/backCard"
        android:id="@+id/cardViewStepsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_card_view_step"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        tools:ignore="PrivateResource"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            >

            <TextView
                android:id="@+id/textViewStepTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/desc_grammar"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:transitionName="@string/transition_step"
                app:layout_constraintBottom_toTopOf="@+id/textViewStepDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewStepDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:transitionName="StepTitle"
                android:text="@string/description_level_beginner"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStepTitle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="StepDesc"
                android:src="@drawable/ic_arrow_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/next_intro" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>