<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionsActivity">

    <include
        layout="@layout/m_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:transitionName="@string/transition_card_view_step"
        android:id="@+id/cardViewStepsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="88dp">

            <TextView
                android:id="@+id/textViewQuestTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="3dp"
                android:text="Step"
                android:textSize="34sp"
                android:textStyle="bold"
                android:transitionName="StepTitle"
                app:layout_constraintBottom_toTopOf="@+id/textViewQuestDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewQuestDesc"
                android:transitionName="StepDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="description"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewQuestTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewStepsItem">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewVocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleVocabulary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/vocabulary"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescriptionVocabulary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/description_vocabulary"
                    android:textSize="17sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/next_intro" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewGrammar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleGrammar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_grammar"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescriptionGrammar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/desc_grammar"
                    android:textSize="17sp"
                    android:textStyle="italic" />


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/next_intro" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewGrammarPractice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleGrammarPractice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_grammar_practice"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescriptionGrammarPractice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/description_grammar_practice"
                    android:textSize="17sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/next_intro" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_reading"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescriptionReading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/description_reading"
                    android:textSize="17sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/next_intro" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewEssay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleEssay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_essay"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescriptionEssay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/description_essay"
                    android:textSize="17sp"
                    android:textStyle="italic" />


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/next_intro" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewAudition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            tools:ignore="PrivateResource">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleAudition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_audition"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDescriptionAudition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/description_audition"
                    android:textSize="17sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_arrow_black_24dp"
                android:contentDescription="@string/next_intro" />
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>